--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,24 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      #- name: Run a one-line script
+      #  run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      #- name: Run a multi-line script
+      #  run: |
+      #    echo Add other actions to build,
+      #    echo test, and deploy your project.
+      - name: Setup Java JDK 17
+        uses: actions/setup-java@v4.4.0
+        with:
+        # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
+          java-version: '17'
+      
+      - name: Package with Maven service-one
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd service-one/
+          mvn clean package
+          cd target/
+          ls
+      
