--- a/service-one/Dockerfile
+++ b/service-one/Dockerfile
@@ -10,8 +10,10 @@ RUN mvn clean package -DskipTests
 # Set an OpenJDK image as the base image
 FROM openjdk:24-jdk
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /app/
+# Create dir for logs
+RUN mkdir logs
 # Copy the built JAR file from the previous stage to the container
-COPY --from=build /app/target/service_one-1.0-release.jar ./
+COPY --from=build /app/target/service-one-1.0-release.jar ./
 # Set the command to run the application
-CMD ["java", "-jar", "service_one-1.0-release.jar"]
+CMD ["java", "-jar", "service-one-1.0-release.jar"]
