--- a/service-one/src/main/resources/application.yml
+++ b/service-one/src/main/resources/application.yml
@@ -46,7 +46,7 @@ server:
 
 logging:
   file:
-    name: "./home/service-one-application.log"
+    name: "./logs/so-app.log"
   pattern:
     file: "%d %-5level [%thread] %logger{0}: %msg%n"
   level:
