--- a/service-two/pom.xml
+++ b/service-two/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>service_two</artifactId>
+    <artifactId>service-two</artifactId>
     <version>1.0-release</version>
 
     <parent>
